<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SocialActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="60dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/picadaTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/trade_winds"
            android:text="@string/tituloValorar"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="45sp" />


    </LinearLayout>

    <ImageButton
        android:id="@+id/fbImageButton"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="155dp"
        android:background="@drawable/fbbnr"
        android:contentDescription="@string/imagefb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>

    <ImageButton
        android:id="@+id/instaImageButton"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/instbnr"
        android:contentDescription="@string/imageinst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fbImageButton"/>

    <TextView
        android:id="@+id/socialByTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/aguafina_script"
        android:text="@string/by"
        android:textColor="@color/color_by"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instaImageButton" />

    <TextView
        android:id="@+id/devTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/aguafina_script"
        android:text="@string/draigh_ao10"
        android:textColor="@color/color_by"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/socialByTextView" />

    <TextView
        android:id="@+id/redesTextView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/trade_winds"
        android:text="@string/redesTextView3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/color_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>