<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RatingActivity"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="398dp"
        android:layout_height="39dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/picadaTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/trade_winds"
            android:text="@string/tituloValorar"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="26sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tyTextView"
        android:layout_width="374dp"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/advent_pro_medium"
        android:text="@string/valoraLaApp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="Tú E-Mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tyTextView">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailValorar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/advent_pro_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tyTextView" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/commentTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginTop="30dp"
            android:hint="Tú comentario o sugerencia es importante."
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tyTextView">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/comentarioValorar"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:fontFamily="@font/advent_pro_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tyTextView" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/questValora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="17dp"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/advent_pro_medium"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:text="@string/questValora"/>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:isIndicator="false"
            android:numStars="5"
            android:rating="0"
            android:soundEffectsEnabled="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendMailButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/sendMailButton" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>